--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,18 +1,8 @@
-<!--
-  Generated template for the WelcomePage page.
+<ion-content padding class="myView" id="welcome">
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+  <img src="assets/imgs/novoLogo.png" class="logo" align="middle" />
+  <h1 align="center"> Welcome </h1>
+  <h2 align="center">Discover great Parks areas and opportunities</h2>
 
-  <ion-navbar>
-    <ion-title>welcome</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
+  <button ion-button block color="lightprimary" class="marginTop" (click)="start()">Get Started</button>
 </ion-content>
