--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -49,17 +49,17 @@
       <div class="row">
         <div class="column">
           <button (click)="doSocialLogin('google')">
-            <img src="../assets/icon/google+_icon.png">
+            <img src="../../assets/icon/google+_icon.png">
           </button>
         </div>
         <div class="column">
           <button (click)="doSocialLogin('facebook')">
-            <img src="../assets/icon/facebook-icon1.png">
+            <img src="../../assets/icon/facebook-icon1.png">
           </button>
         </div>
         <div class="column">
           <button (click)="doSocialLogin('twitter')">
-            <img src="../assets/icon/twitter_icon.png">
+            <img src="../../assets/icon/twitter_icon.png">
           </button>
         </div>
       </div>
