Park Details and SearchResult
Included park-details page and styled the search result page.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <ion-toolbar color="dark">
       <ion-buttons start>
         <button ion-button icon-only color="primary" (click)="doLogout()">
-          <ion-icon color="dark" name="log-out"></ion-icon>
+          <ion-icon color="white" name="log-out"></ion-icon>
         </button>
       </ion-buttons>
       <ion-title>Home</ion-title>
