--- a/src/pages/search-result/search-result.html
+++ b/src/pages/search-result/search-result.html
@@ -1,18 +1,30 @@
-<!--
-  Generated template for the SearchResultPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
+    <ion-navbar color="primary">
+      <ion-buttons menu-toggle>
+          <button ion-button menuToggle icon-only color="primary">
+              <ion-icon color="white" name="menu"></ion-icon>
+            </button>
+      </ion-buttons>
 
-  <ion-navbar>
-    <ion-title>search-result</ion-title>
-  </ion-navbar>
+      <ion-title>Search Result</ion-title>
+    </ion-navbar>
+  </ion-header>
 
-</ion-header>
-
-
-<ion-content padding>
-
+<ion-content class="card-background-page">
+    <div *ngIf="parksFiltered.length == 0" class="parksNotFound">
+        <h1>No Parks Found!</h1>
+    </div>
+    <div *ngIf="parksFiltered.length > 0">
+      <ion-list *ngFor="let park of parksFiltered">
+        <ion-card >
+          <div class="img">
+              <img [src]="park.images[0].imageURL" (click)="getParkDetails(park)">
+              <div class="card-title" (click)="getParkDetails(park)">{{park.name}}</div>
+          </div>        
+        </ion-card>
+        <div class="card-subtitle">
+            {{park.address.Suburb}} - XXX km away
+        </div>        
+      </ion-list>
+    </div>
 </ion-content>
