changed models and pages
changed models and pages

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -29,7 +29,7 @@
     </ion-content>
 
     <ion-footer class="footer">
-        <ion-row>
+        <ion-row text-wrap>
           <ion-col text-center ion-text color="white">
               {{selectedFacilities}}
           </ion-col>
