--- a/src/pages/search-result/search-result.html
+++ b/src/pages/search-result/search-result.html
@@ -23,7 +23,7 @@
           </div>        
         </ion-card>
         <div class="card-subtitle">
-            {{park.address.Suburb}} - XXX km away
+            {{park.address.suburb}}  -  12 km away
         </div>        
       </ion-list>
     </div>
