--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -4,5 +4,5 @@
   <h1 align="center"> Welcome </h1>
   <h2 align="center">Discover great Parks areas and opportunities</h2>
 
-  <button ion-button block color="lightprimary" class="marginTop" (click)="start()">Get Started</button>
+  <!-- <button ion-button block color="lightprimary" class="marginTop" (click)="start()">Get Started</button> -->
 </ion-content>
