--- a/src/pages/forget/forget.html
+++ b/src/pages/forget/forget.html
@@ -7,7 +7,7 @@
   </ion-header>
   
   
-  <ion-content>
+  <ion-content padding class="background">
   
     <form [formGroup]="forgetForm" (ngSubmit)="doForget()">
   
