--- a/src/pages/search/search.html
+++ b/src/pages/search/search.html
@@ -1,18 +1,31 @@
-<!--
-  Generated template for the SearchPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
+  <ion-navbar color="blue">
+    <button ion-button menuToggle ion-buttons end>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Search</ion-title>
   </ion-navbar>
-
 </ion-header>
 
+<ion-content padding class="card-background-page">
+    
+  <ion-searchbar (ionInput)="searchParks($event)"></ion-searchbar>
+    <div *ngIf="parksFiltered.length == 0" class="parksNotFound">
+      <h1>No Parks Found!</h1>
+    </div>
+    <div *ngIf="parksFiltered.length > 0">
+      <ion-list *ngFor="let park of parksFiltered">
+        <ion-card >
+          <div class="img">
+              <img [src]="park.images[0].imageURL" (click)="getParkDetails(park)">
+              <div class="card-title" (click)="getParkDetails(park)">{{park.name}}</div>
+          </div>        
+        </ion-card>
+        <div class="card-subtitle">
+            {{park.address.suburb}}  -  12 km away
+        </div>        
+      </ion-list>
+    </div>
+  </ion-content>
+           
 
-<ion-content padding>
-
-</ion-content>
