--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,18 +1,42 @@
-<!--
-  Generated template for the SettingsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
+  <ion-navbar color="blue">
     <ion-title>Settings</ion-title>
   </ion-navbar>
-
 </ion-header>
 
+<ion-content class="background" >
 
-<ion-content padding>
+    <ion-item-group>
+        <ion-item-divider class="grey"><em>&nbsp;VERSION INFORMATION</em></ion-item-divider>
+        <ion-item class="background">App Version 1.0.0 June 2018</ion-item>
+      </ion-item-group>
 
+    <ion-item-group>
+          <ion-item-divider class="grey"><em>&nbsp;CONTACT US</em></ion-item-divider>
+          <ion-item class="background">MyPark is also available online  <br>at
+              www.myParkSydney.com
+            <br>
+            <br>
+              If you are having any problems with the <br>
+               MyPark app or wish to make any suggestions, <br>
+               please contact us at team@mypark.com
+           </ion-item>
+      </ion-item-group>
+
+      <ion-item-group>
+          <ion-item-divider class="grey"><em>&nbsp;NOTIFICATIONS</em></ion-item-divider>
+          <ion-item class="background">
+            <ion-label>Enable Push Notifications</ion-label>
+            <ion-toggle value="foo" checked="true"></ion-toggle>
+          </ion-item>
+        </ion-item-group>
+
+        <ion-item-group>
+            <ion-item-divider class="grey"><em>  &nbsp;ACCOUNT</em></ion-item-divider>
+            <ion-item class="background">
+                <ion-label>Remove Account</ion-label>
+                <ion-toggle value="foo" checked="true"></ion-toggle>
+              </ion-item>
+          </ion-item-group> 
+  
 </ion-content>
