--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,7 +6,7 @@
   
 </ion-header>  
   
-<ion-content padding>
+<ion-content padding class="background">
 
   <form [formGroup]="registerForm" (ngSubmit)="doRegister()">
 
