Added Rate Favourites and MyPark icons and splashscreen

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -25,7 +25,7 @@
     </form>
   
     <ion-grid text-center>
-      <ion-row>
+      <ion-row class="forget-register">
         <ion-col>
           <a href="#" class="login-optons" (click)="navForget()">Forgot Password</a>
         </ion-col>
