--- a/src/pages/forget/forget.html
+++ b/src/pages/forget/forget.html
@@ -13,7 +13,7 @@
   
       <ion-list>
         <ion-item>
-          <ion-label floating>Email</ion-label>
+          <ion-label color="dark" floating>Email</ion-label>
           <ion-input type="email" formControlName="email"></ion-input>
         </ion-item>
       </ion-list>
