added review page and functionality

--- a/src/pages/park-details/park-details.html
+++ b/src/pages/park-details/park-details.html
@@ -59,7 +59,7 @@
     
       <ion-row no-padding>
         <ion-col text-center>
-          <button class="action-button" ion-button small round icon-start>
+          <button class="action-button" (click)="openReviews()" ion-button small round icon-start>
             <ion-icon name='chatboxes'></ion-icon>
             Review
           </button>
