--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPci2n-gH-9Wybpd3Oo-faGLEz4_EK-OM&callback=initMap"
-  type="text/javascript"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPci2n-gH-9Wybpd3Oo-faGLEz4_EK-OM&libraries=places"></script>
+  <!-- <script src="http://maps.google.com/maps/api/js?key=AIzaSyBPci2n-gH-9Wybpd3Oo-faGLEz4_EK-OM&libraries=places&callback=initMap"></script> -->
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
