created the page Profile and load the user data

--- a/src/pages/forget/forget.html
+++ b/src/pages/forget/forget.html
@@ -19,7 +19,7 @@
       </ion-list>
   
       <div padding>
-        <button ion-button color="primary" block type="submit" [disabled]="!forgetForm.valid">Forgot my password</button>
+        <button class="button-style" ion-button color="primary" block type="submit" [disabled]="!forgetForm.valid">Forgot my password</button>
       </div>
     </form>
   
