--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -30,7 +30,7 @@
     </ion-list>
 
     <div padding>
-      <button ion-button color="primary" block type="submit" [disabled]="!registerForm.valid">Register</button>
+      <button class="button-style" ion-button color="primary" block type="submit" [disabled]="!registerForm.valid">Register</button>
     </div>
 
   </form>
