--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,13 +3,19 @@
       <button ion-button menuToggle ion-buttons end>
         <ion-icon name="menu"></ion-icon>
       </button>
-      <ion-buttons start >
+      <!-- <ion-buttons start >
         <button ion-button (click)="openSearchPage()">
         <ion-icon name="search" class="searchIcon"></ion-icon>
        </button>
-      </ion-buttons>
+      </ion-buttons> -->
       <ion-title>Home</ion-title>
     </ion-navbar>
+    <ion-row>
+        <ion-col text-center>
+          <p>Hello, {{userModel.name}}</p>
+          <p>What would you like to do today?</p>
+        </ion-col>
+      </ion-row>
   </ion-header>
   
   <ion-content class="card-background-page">
@@ -25,6 +31,7 @@
               <img [src]="facility.imageURL" (click)="selectFacility(facility)">
               <div class="card-title" (click)="selectFacility(facility)">{{facility.name}}</div>
             </div>
+            <div class="img-bg"></div>
           </ion-card>
       </ion-list>
     </ion-content>
