--- a/src/pages/search-result/search-result.html
+++ b/src/pages/search-result/search-result.html
@@ -20,11 +20,11 @@
           <div class="img">
               <img [src]="park.images[0].imageURL" (click)="getParkDetails(park)">
               <div class="card-title" (click)="getParkDetails(park)">{{park.name}}</div>
-          </div>        
+          </div>
         </ion-card>
         <div class="card-subtitle">
-            {{park.address.suburb}}  -  12 km away
-        </div>        
+            {{park.address.suburb}}
+        </div>   
       </ion-list>
     </div>
 </ion-content>
