--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -14,29 +14,12 @@
     <ion-item-group>
           <ion-item-divider class="grey"><em>&nbsp;CONTACT US</em></ion-item-divider>
           <ion-item class="background">MyPark is also available online  <br>at
-              www.myParkSydney.com
+              www.myparkapp.com
             <br>
             <br>
               If you are having any problems with the <br>
-               MyPark app or wish to make any suggestions, <br>
-               please contact us at team@mypark.com
+              MyPark app or wish to make any suggestion, <br>
+              please contact us at team@myparkapp.com
            </ion-item>
-      </ion-item-group>
-
-      <ion-item-group>
-          <ion-item-divider class="grey"><em>&nbsp;NOTIFICATIONS</em></ion-item-divider>
-          <ion-item class="background">
-            <ion-label>Enable Push Notifications</ion-label>
-            <ion-toggle value="foo" checked="true"></ion-toggle>
-          </ion-item>
-        </ion-item-group>
-
-        <ion-item-group>
-            <ion-item-divider class="grey"><em>  &nbsp;ACCOUNT</em></ion-item-divider>
-            <ion-item class="background">
-                <ion-label>Remove Account</ion-label>
-                <ion-toggle value="foo" checked="true"></ion-toggle>
-              </ion-item>
-          </ion-item-group> 
-  
+      </ion-item-group>  
 </ion-content>
