--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
-
+  
+  <!-- Script to load Google Maps -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPci2n-gH-9Wybpd3Oo-faGLEz4_EK-OM&libraries=places"></script>
 
   <!-- add to homescreen for ios -->
